  HikariCP connection pool plugin added
  Ant dependencies.xml file removed along with associated stuff, never used
  org.jminor.common.Configuration added
  org.jminor.framework.Configuration and associated abominations removed, configuration values refactored and spread all over the place
  Removed a reference to Configuration from framework module build file
  Property.SQL_BOOLEAN_VALUE_* initialization bug fixed
  Databases.createInstance() renamed to getInstance(), now creates an instance only when required
  Property.SQL_BOOLEAN_VALUE_* configuration values removed
  Database.getBooleanTrueValue() and getBooleanFalseValue() added instead of the above, by default returns Boolean.TRUE and Boolean.FALSE respectively, overridden in OracleDatabase and SQLServerDatabase with 1 and 0
  DefaultEntityConnectionServer.parseCommaSeparatedValues() moved to TextUtil
  Database.DATABASE_INIT_SCRIPT now supports a comma separated list of scripts, used by H2Database
  Database.createInstance() added back as deprecated, a bit too much of a breaking change
  Databases.isDatabaseTypeSpecified() added
  DefaultProperty only tries to use Databases.getInstance() when the above returns true
  Database configuration valuefied
  Database.getDatabaseType() renamed to getType()
0.10.11
  ClientInfo renamed to RemoteClient
  ConnectionInfo renamed to ConnectionRequest
  ServerUtil.JAVAX_NET_NET_TRUSTSTORE configuration constant moved to Server
  ServerUtil renamed to Servers and ClientUtil renamed to Clients
  org.jminor.common.model.reports package moved to org.jminor.common.db
  ExceptionUtil, DateFormats and ProgressReporter moved to common core
  TimeUtil split from DateUtil due to java.sql dependencies
  Module dependencies modified according to the above
  Common module broken up into submodules
  Framework module broken up into submodules
  Swing module broken up into submodules
  Cleanup after breakup
  Automatic-Module-Name attribute added to jar manifests