@@ -48,10 +48,7 @@
 
   <target name="retrieve_libraries" depends="retrieve_build_libraries"
           description="Resolves all libraries according to ivy.xml">
-    <taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="lib.ant.util"/>
-    <ivy:settings file="${project.root}/ivysettings.xml"/>
-    <ivy:resolve file="ivy.xml"/>
-    <ivy:retrieve pattern="${lib}/[conf]/[artifact]-[revision].[ext]" sync="true"/>
+    <resolve_ivy/>
   </target>
 
   <target name="build" depends="build_main, build_test" description="Builds this module"/>
