@@ -1,30 +1,24 @@
 <ivy-module version="2.0" xmlns:m="http://ant.apache.org/ivy/maven">
   <info organisation="org.jminor" module="jminor-swing-client-bundle"/>
 
-  <configurations defaultconfmapping="compile->default">
-    <conf name="compile"/>
-    <conf name="runtime" extends="compile"/>
-    <conf name="test" extends="runtime"/>
+  <configurations>
+    <conf name="runtime"/>
     <conf name="sources"/>
     <conf name="javadoc"/>
   </configurations>
 
   <publications>
-    <artifact name="jminor-swing-client-bundle" type="jar" ext="jar" conf="compile"/>
-    <artifact name="jminor-swing-client-bundle" type="pom" ext="pom" conf="compile"/>
+    <artifact name="jminor-swing-client-bundle" type="jar" ext="jar" conf="runtime"/>
+    <artifact name="jminor-swing-client-bundle" type="pom" ext="pom" conf="runtime"/>
     <artifact name="jminor-swing-client-bundle-sources" type="source" ext="jar" conf="sources" m:classifier="sources"/>
     <artifact name="jminor-swing-client-bundle-javadoc" type="javadoc" ext="jar" conf="javadoc" m:classifier="javadoc"/>
   </publications>
 
-  <dependencies defaultconf="compile">
+  <dependencies defaultconf="runtime">
     <dependency org="org.slf4j" name="slf4j-api" rev="${slf4j-api.version}"/>
     <dependency org="ch.qos.logback" name="logback-classic" rev="${logback.version}"/>
     <dependency org="ch.qos.logback" name="logback-core" rev="${logback.version}"/>
-
     <dependency org="org.json" name="json" rev="${json.version}"/>
     <dependency org="com.toedter" name="jcalendar" rev="${jcalendar.version}"/>
-
-    <dependency org="junit" name="junit" rev="${junit.version}" conf="test->master"/>
-    <dependency org="org.hamcrest" name="hamcrest-core" rev="${hamcrest-core.version}" conf="test->master"/>
   </dependencies>
 </ivy-module>
